# zetaml

./: .gitignore  CMakeLists.txt  README.md
CMake/: i386-linux-gnu.cmake
docs/: actual-index.html  index.html  matrices.html  transform.html  utility.html  vectors.html
docs/src/: index-highlight.js  shared.css
include/: zetaml.h  zetamlc.h
src/: CMakeLists.txt  internal.h  main.c  matrix.c  transform.c  utils.c  vector.c
tests/: CMakeLists.txt  general.c
